appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- assertVisible: "Components"
- openLink: "rntester://example/FlatListExample"
- tapOn:
    id: "Basic"
- assertVisible:
    id: "item_550"
# - repeat:
#     while:
#       notVisible:
#         id: "item_600" # should trigger a reload
#     commands:
#       - swipe:
#           start: 50%, 85%
#           end: 50%, 50%
#       - waitForAnimationToEnd: # wait for the reload to happen
#           timeout: 1000
# - assertVisible:
#     id: "item_600"
- assertVisible:
    text: "Empty:"
- tapOn:
    id: "switch_empty_option"
- assertVisible:
    text: "The list is empty :o"
