appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- assertVisible: "Components"
- scrollUntilVisible:
    element:
      id: "Modal"
    direction: DOWN
    speed: 60
- tapOn:
    id: "Modal"
